tests/ui/errors/snapshots/parse_fn_as_lambda_in_let_rhs.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:12]
 2 │ fn main() {
 3 │   let op = fn() -> Result<(), error> {
   ·            ─┬─
   ·             ╰── expected a lambda
 4 │     Ok(())
   ╰────
  help: Use a lambda instead: `|x| x * 2` · code: [parse.fn_as_lambda]
