tests/ui/errors/snapshots/parse_format_specifier_in_fstring.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Format specifiers not supported
   ╭─[test.lis:4:20]
 3 │   let n = 255
 4 │   let s = f"hex: {n:02x}"
   ·                    ──┬─
   ·                      ╰── not supported in format strings
 5 │ }
   ╰────
  help: Use `fmt.Sprintf` for formatted output, e.g. `fmt.Sprintf("%02x", n)` · code: [parse.format_specifier]
