tests/ui/errors/snapshots/parse_function_call_missing_comma.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:9]
 2 │ fn test() {
 3 │   foo(1 2 3);
   ·         ┬
   ·         ╰── expected `,` or `)`
 4 │ }
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
