tests/ui/errors/snapshots/parse_go_make_map.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let m = make(map[string]int)
   ·           ──┬─
   ·             ╰── Lisette has no `make` builtin
 4 │ }
   ╰────
  help: Use `Map.new<K, V>()` · code: [parse.go_make_builtin]
