tests/ui/errors/snapshots/parse_go_make_slice_with_capacity.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:3:12]
 2 │ fn test() {
 3 │   let xs = make([]int, 0, 16)
   ·            ──┬─
   ·              ╰── Lisette has no `make` builtin
 4 │ }
   ╰────
  help: Use `slices.Grow(Slice.new<T>(), capacity)` after importing `go:slices` · code: [parse.go_make_builtin]
