tests/ui/errors/snapshots/parse_go_make_unbuffered_channel.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:3:12]
 2 │ fn test() {
 3 │   let ch = make(chan int)
   ·            ──┬─
   ·              ╰── Lisette has no `make` builtin
 4 │ }
   ╰────
  help: Use `Channel.new<T>()` · code: [parse.go_make_builtin]
