tests/ui/errors/snapshots/parse_impl_in_interface_rejected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Interface embedding uses `embed`
   ╭─[test.lis:6:3]
 5 │ interface ReadWriter {
 6 │   impl Reader
   ·   ──┬─
   ·     ╰── write `embed` here
 7 │   fn write(s: string);
   ╰────
  help: Interfaces embed other interfaces with `embed`. Replace `impl` with `embed` · code: [parse.impl_interface_embed]
