tests/ui/errors/snapshots/parse_import_after_item.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Misplaced import
   ╭─[test.lis:6:1]
 5 │ 
 6 │ import "go:fmt"
   · ───────┬───────
   ·        ╰── not allowed here
   ╰────
  help: Imports must come before every other top-level item. Move this import to the top of the file, or run `lis format` to hoist it · code: [parse.import_after_item]
