tests/ui/errors/snapshots/parse_inclusive_range_full_without_end.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:24]
 1 │ fn test() { let r = ..=; }
   ·                        ┬
   ·                        ╰── expected end value
   ╰────
  help: Inclusive ranges require an end value · code: [parse.syntax_error]
